--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "author": "Antoine Espieux <antoine.espieux@example.com>",
   "name": "antoine-espieux-tp4",
   "version": "0.0.0",
   "private": true,
@@ -15,7 +16,9 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.10",
     "@vitejs/plugin-vue": "^5.0.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "vite": "^5.0.11"
