--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Antoine Espieux <antoine.espieux@example.com>",
+  "author": "Antoine Espieux <antoine.espieux@edu.devinci.fr>",
   "name": "antoine-espieux-tp4",
   "version": "0.0.0",
   "private": true,
